--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ img {
 
 			<div class="app_feature_list">
 			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4595.html">
-																	<img src="images/staticpage.png " />
+																	<img src="icon(94).png" />
 										</a>
 		<a  rel="external" data-ajax="flase"  href="staticpage_4595.html">
-				<label>StaticPage</label>
+				<label>What to expect</label>
 		</a>
 	</div>
 
