--- a/staticpage_4595_9095.html
+++ b/staticpage_4595_9095.html
@@ -74,7 +74,7 @@ img {
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>When visiting your doctor</h1>
+    <h1>Step 1</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -88,7 +88,9 @@ img {
 
   
 
-  <br>
+  When visiting your doctor, your experience begins with a VECTRA<br>
+3D picture session in the doctor's office. This creates the starting<br>
+point for your aesthetic consultation.<br><img alt="" src="http://www.sculptmydream.com/i/learn-slide1.jpg" align="none"><br>
 
   </div>
 
