--- a/staticpage_4595_9096.html
+++ b/staticpage_4595_9096.html
@@ -22,6 +22,8 @@
 
 <link rel="stylesheet" href="css/static_page.css" />
 
+<!--ThemeSettingSubpage-->
+
 <!--ThemeSetting-->
 
 <script src="js/jquery_1.9.1.js"></script>
@@ -70,9 +72,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>What to expect</h1>
+    <h1>Step 2</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -82,28 +84,25 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4595_9095.html">
-                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
-                                <h2>
-                Step 1                </h2>
-                <p>When visiting your doctor</p>
-                
-            </a></li>
-	
-		 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4595_9096.html">
-                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
-                                <h2>
-                Step 2                </h2>
-                <p>http://www.sculptmydream.com/movie_images/expectSculpt/loading.png</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  &lt;li class="slide" id="slide2"&gt;<br>
+    &lt;div class="slide2-bg"&gt;<br>
+    &lt;div id="movieTheatre"&gt;&lt;span lang="frameRate"&gt;90&lt;/span&gt;<br>
+    &lt;span lang="frameCount"&gt;33&lt;/span&gt;<br>
+    &lt;img name="expectSculpt" src="movie_images/expectSculpt/loading.png"<br>
+ height="441" width="510"&gt;&lt;/div&gt;<br>
+    &lt;/div&gt;<br>
+    &lt;span&gt;Step 2:&lt;/span&gt;<br>
+    &lt;p&gt;Using special simulation software on your 3D picture, your<br>
+doctor will show you the possible results of the aesthetic procedures<br>
+you may choose to have. You will be able to experiment with different<br>
+looks until you find the one you want.&lt;/p&gt;<br>
+  &lt;/li&gt;
+
+  </div>
 
   
 
