--- a/staticpage_4595_9098.html
+++ b/staticpage_4595_9098.html
@@ -74,7 +74,7 @@ img {
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>Step 2</h1>
+    <h1>Final</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -88,10 +88,14 @@ img {
 
   
 
-  <li class="slide" id="slide2"><span lang="frameRate"></span><img alt="" src="http://www.sculptmydream.com/movie_images/expectSculpt/frame18.jpg" align="none"><br>
-    <br>
-    <font size="4"><b><span>Step 2:</span></b></font><br>
-    <p align="justify">Using special simulation software on your 3D picture, your doctor will show you the possible results of the aesthetic procedures you may choose to have. You will be able to experiment with different looks until you find the one you want.</p></li><img alt="" src="http://www.sculptmydream.com/movie_images/expectSculpt/frame32.jpg" align="none"><li class="slide" id="slide2"><br></li>
+  Try an online demo<br>
+    A consulation with your physician and the VECTRA 3D software lets you:<br>
+    <br><ul><li>
+      Use a 3D image of your own body.</li></ul><ul><li>
+      Try on” different size implants.</li></ul><ul><li>
+      See the results from different angles.</li></ul><ul><li>
+      Select the implant that’s best for you.</li></ul>
+    To Find a Doctor Near You enter your zip code or use 2128<br><br>http://www.sculptmydream.com/sculptor <br>
 
   </div>
 
