--- a/staticpage_4595_9097.html
+++ b/staticpage_4595_9097.html
@@ -74,7 +74,7 @@ img {
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>Step 2</h1>
+    <h1>Step 3</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -88,10 +88,11 @@ img {
 
   
 
-  <li class="slide" id="slide2"><span lang="frameRate"></span><img alt="" src="http://www.sculptmydream.com/movie_images/expectSculpt/frame18.jpg" align="none"><br>
-    <br>
-    <font size="4"><b><span>Step 2:</span></b></font><br>
-    <p align="justify">Using special simulation software on your 3D picture, your doctor will show you the possible results of the aesthetic procedures you may choose to have. You will be able to experiment with different looks until you find the one you want.</p></li><img alt="" src="http://www.sculptmydream.com/movie_images/expectSculpt/frame32.jpg" align="none"><li class="slide" id="slide2"><br></li>
+  <img alt="" src="http://www.sculptmydream.com/movie_images/expectResult/frame26.jpg" align="none"><br><br>&lt;span&gt;Step 3:&lt;/span&gt;<br>
+    &lt;p&gt;Once you have decided on the appearance you want, this<br>
+simulation will provide a basis for your surgical plan. Because you<br>
+have already seen the result, you can be confident in the outcome of<br>
+the procedure.&lt;/p&gt;<br>
 
   </div>
 
