--- a/staticpage_4595_9098.html
+++ b/staticpage_4595_9098.html
@@ -95,7 +95,7 @@ img {
       Try on” different size implants.</li></ul><ul><li>
       See the results from different angles.</li></ul><ul><li>
       Select the implant that’s best for you.</li></ul>
-    To Find a Doctor Near You enter your zip code or use 2128<br><br>http://www.sculptmydream.com/sculptor <br>
+    To Find a Doctor Near You enter your zip code or use 2128<br><a target="" title="" href="http://www.sculptmydream.com/sculptor"><br>http://www.sculptmydream.com/sculptor </a><br>
 
   </div>
 
