--- a/staticpage_4595_9097.html
+++ b/staticpage_4595_9097.html
@@ -88,11 +88,11 @@ img {
 
   
 
-  <img alt="" src="http://www.sculptmydream.com/movie_images/expectResult/frame26.jpg" align="none"><br><br>&lt;span&gt;Step 3:&lt;/span&gt;<br>
-    &lt;p&gt;Once you have decided on the appearance you want, this<br>
+  <img alt="" src="http://www.sculptmydream.com/movie_images/expectResult/frame26.jpg" align="none"><br><br><span>Step 3:</span><br>
+    <p>Once you have decided on the appearance you want, this<br>
 simulation will provide a basis for your surgical plan. Because you<br>
 have already seen the result, you can be confident in the outcome of<br>
-the procedure.&lt;/p&gt;<br>
+the procedure.</p><br>
 
   </div>
 
