--- a/staticpage_4598.html
+++ b/staticpage_4598.html
@@ -74,7 +74,7 @@ img {
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>Final</h1>
+    <h1>Sculptor 3D Software</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -88,10 +88,11 @@ img {
 
   
 
-  A consultation with your physician and the VECTRA 3D software lets you:<br>
-    <br><ul><li>
-      Use a 3D image of your own body.</li></ul><ul><li>
-      Try on
+  <div align="justify">The Sculpt My Dream simulation technology that will be used by your doctor was developed by <a href="http://www.sculptmydream.com/about" title="About Us">Canfield Imaging Systems</a>,
+ a division of Canfield Scientific, the leading provider of clinical 
+imaging systems. Canfield specializes in photographic applications for 
+aesthetic medicine, and their products are used in patient consultations
+ by thousands of practitioners worldwide.<br></div><img alt="" src="http://www.sculptmydream.com/movie_images/aboutSculpt/frame29.jpg" align="none"><br><br><div align="justify"><pre id="line1"><span>The three dimensional photograph is processed by Sculptor software to display the virtual model on a computer monitor. It can be rotated on the screen and viewed from almost any angle. The software then allows your doctor to apply simulation tools that change the size, shape and position of your breasts to achieve the desired appearance. Once you are satisfied with the result, your doctor will develop a surgical plan based on the changes you have made.</span></pre></div><br>
 
   </div>
 
