--- a/staticpage_4595_9095.html
+++ b/staticpage_4595_9095.html
@@ -90,7 +90,18 @@ img {
 
   When visiting your doctor, your experience begins with a VECTRA<br>
 3D picture session in the doctor's office. This creates the starting<br>
-point for your aesthetic consultation.<br><img alt="" src="http://www.sculptmydream.com/i/learn-slide1.jpg" align="none"><br>
+point for your aesthetic consultation.<br><br><embed src="http://media.nbcmiami.com/designvideo/embeddedPlayer.swf" flashvars="v=http%3A%2F%2Fwww.nbcmiami.com%2Fi%2Fembed_new%2F%3Fcid%3D169562426%26path=//news/local" allowfullscreen="true" allowscriptaccess="always" height="324" width="576"><br><div align="justify"><strong class="fn">NBC-TV news talks to Dr. Michael Kelly about VECTRA 3D aesthetic simulation</strong>
+ <br>When it comes to breast implants, size really matters.
+
+“I wanted to look bigger but I didn't want to be like falling over, but I
+ also didn’t want to be like you couldn’t see a change from what I had 
+before. So I think my biggest issue was getting that right size without 
+overdoing it.” Stephanie Cristobal said.
+
+To see what she will look like after surgery, Cristobal had her picture 
+taken with the VECTRA 3D system at Miami Plastic Surgery. Six cameras 
+take simultaneous photos to create 3D images of the patient. The system 
+then creates before and after simulations of breast augmentation surgery.<br></div><br>
 
   </div>
 
