--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@ img {
 	</div>
 
 			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4600.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_4600.html">
+				<label>FAQs</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
 			<a  rel="external" data-ajax="flase"  class="item link" href="video_4596.html">
 																	<img src="images/video.png " />
 										</a>
