--- a/more.html
+++ b/more.html
@@ -122,6 +122,15 @@
 	</div>
 
 			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4600.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_4600.html">
+				<label>FAQs</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
 			<a  rel="external" data-ajax="flase"  class="item link" href="video_4596.html">
 																	<img src="images/video.png " />
 										</a>
@@ -163,7 +172,7 @@
 
             <style> .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 40px !important; width: 60px!important;}		.nav-glyphish-example .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }#tab1 .ui-icon { background:  url("icons_tech_1579.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab2 .ui-icon { background:  url("icons_communication_1092.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab3 .ui-icon { background:  url("64Px_-_504-11.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab4 .ui-icon { background:  url("64Px_-_504-210.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab5 .ui-icon { background:  url("more.png") 50% 50% no-repeat; background-size: 30px 30px; }</style>
 
-            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="staticpage_4598.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4598.html" class="" onclick="window.open('staticpage_4598.html','_self', 'location=yes')">Sculptor 3D Software</a></li><li><a href="staticpage_4595.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4595.html" class="" onclick="window.open('staticpage_4595.html','_self', 'location=yes')">What to expect</a></li><li><a href="staticpage_4599.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4599.html" class="" onclick="window.open('staticpage_4599.html','_self', 'location=yes')">Testimonials and videos from Doctors & Patients</a></li><li><a href="video_4596.html" id="tab2" data-icon="custom" rel="external"  data-gourl="video_4596.html" class="" onclick="window.open('video_4596.html','_self', 'location=yes')">Videos</a></li><li><a href="aweber.html" id="tab2" data-icon="custom" rel="external"  data-gourl="aweber.html" class="" onclick="window.open('aweber.html','_self', 'location=yes')">Optin form</a></li><li><a href="rss_4594.html" id="tab2" data-icon="custom" rel="external"  data-gourl="rss_4594.html" class="" onclick="window.open('rss_4594.html','_self', 'location=yes')">RSS</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
+            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="staticpage_4598.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4598.html" class="" onclick="window.open('staticpage_4598.html','_self', 'location=yes')">Sculptor 3D Software</a></li><li><a href="staticpage_4595.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4595.html" class="" onclick="window.open('staticpage_4595.html','_self', 'location=yes')">What to expect</a></li><li><a href="staticpage_4599.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4599.html" class="" onclick="window.open('staticpage_4599.html','_self', 'location=yes')">Testimonials and videos from Doctors & Patients</a></li><li><a href="staticpage_4600.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4600.html" class="" onclick="window.open('staticpage_4600.html','_self', 'location=yes')">FAQs</a></li><li><a href="video_4596.html" id="tab2" data-icon="custom" rel="external"  data-gourl="video_4596.html" class="" onclick="window.open('video_4596.html','_self', 'location=yes')">Videos</a></li><li><a href="aweber.html" id="tab2" data-icon="custom" rel="external"  data-gourl="aweber.html" class="" onclick="window.open('aweber.html','_self', 'location=yes')">Optin form</a></li><li><a href="rss_4594.html" id="tab2" data-icon="custom" rel="external"  data-gourl="rss_4594.html" class="" onclick="window.open('rss_4594.html','_self', 'location=yes')">RSS</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
 
         </div>	
 
