--- a/staticpage_4599.html
+++ b/staticpage_4599.html
@@ -89,7 +89,7 @@ img {
   
 
   <div id="thumbs">
-	  <ul><li><a href="http://vimeo.com/21593037"><div class="vid-frame"><img src="http://www.sculptmydream.com/i/testimonials/21593037.jpg" class="thumb"></div><p>Charlene – age 39</p></a></li><li><a href="http://vimeo.com/21443635"><div class="vid-frame"><img src="http://www.sculptmydream.com/i/testimonials/21443635.jpg" class="thumb"></div><p>Julia - Age 34</p></a></li><li><a href="http://vimeo.com/21443037"><div class="vid-frame"><img src="http://www.sculptmydream.com/i/testimonials/21443037.jpg" class="thumb"></div><p>Diane  - Age 36</p></a></li></ul>
+	  <ul><li><a href="http://vimeo.com/21593037"><div class="vid-frame"><img src="http://www.sculptmydream.com/i/testimonials/21593037.jpg" class="thumb"></div></a><p>Charlene – age 39</p></li><li><a href="http://vimeo.com/21443635"><div class="vid-frame"><img src="http://www.sculptmydream.com/i/testimonials/21443635.jpg" class="thumb"></div></a><p>Julia - Age 34</p></li><li><a href="http://vimeo.com/21443037"><div class="vid-frame"><img src="http://www.sculptmydream.com/i/testimonials/21443037.jpg" class="thumb"></div></a><p>Diane  - Age 36</p></li></ul>
    </div><section id="test-cust">
 	  <blockquote><p>I knew I wanted an augmentation, but Breast Sculptor 
 showed me how much better I would look with a lift as well. I am really 
